Week1: commit all project updates, new hotel_reservation module, configs, and tests

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -2,8 +2,8 @@ version: '3'
 dotenv: [.env]
 
 vars:
-  PACKAGE_IMPORT_NAME: mlops_course
-  PYTHON_VERSION: 3.11
+  PACKAGE_IMPORT_NAME: hotel_reservation
+  PYTHON_VERSION: 3.12
 
 tasks:
   create-venv:
@@ -19,6 +19,8 @@ tasks:
       - task: create-venv
       - uv sync --extra dev
 
+
+
   sync-test:
     desc: Sync only test dependencies
     cmds:
@@ -31,6 +33,42 @@ tasks:
     desc: Run pre-commit hooks
     cmds:
       - uv run pre-commit run --all-files
+
+  run-unit-tests:
+    cmds:
+      - export PYTEST_EXIT_STATUS=0
+      - rm -rf test-reports || true
+      - uv run pytest -m "not ci_exclude" ./tests --cov "{{.TASKFILE_DIR}}/src/{{.PACKAGE_IMPORT_NAME}}" --cov-report html --cov-report term  --cov-report xml --junit-xml "{{.TASKFILE_DIR}}/test-reports/report.xml" --cov-fail-under 60 || ((PYTEST_EXIT_STATUS+=$?))
+      - mv coverage.xml "{{.TASKFILE_DIR}}/test-reports/" || true
+      - mv htmlcov "{{.TASKFILE_DIR}}/test-reports/" && rm -rf htmlcov
+      - mv .coverage "{{.TASKFILE_DIR}}/test-reports/" || true
+      - exit $PYTEST_EXIT_STATUS
+    silent: true
+    desc: "Run tests with coverage reports and move results to test-reports directory"
+
+
+  serve-coverage-report:
+    desc: "Serve the coverage report via a local HTTP server on port 8000"
+    cmd: |
+      echo "Coverage report available at: http://localhost:8000/"
+      python -m http.server --directory "{{.TASKFILE_DIR}}/test-reports/htmlcov/" 8000
+    silent: false
+
+  clean:
+    desc: "Clean up build artifacts, caches, and temporary files"
+    cmds:
+      #- rm -rf dist build coverage.xml test-reports tests/mlruns test-house_price
+      - find . -type d \( -name "*cache*" -o -name "*.dist-info" -o -name "*.egg-info" -o -name "*htmlcov" \) -not -path "*env/*" -exec rm -r {} + || true
+      - find . -type f -name "*.pyc" -not -path "*env/*" -exec rm {} +
+    silent: true
+
+
+  build:
+    desc: Build the project
+    cmds:
+      - uv build
+
+
 
   help:
     desc: Print all tasks defined in the Taskfile
