--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,4 +98,6 @@ docstring-code-format = true
 [dependency-groups]
 dev = [
     "ipykernel>=6.30.1",
+    "pre-commit>=4.3.0",
+    "ruff>=0.12.12",
 ]
