--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,9 +15,9 @@ repos:
       - id: detect-private-key
       - id: forbid-new-submodules
       - id: check-docstring-first
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.9.5
-    hooks:
-      - id: ruff
-        args: [--fix, --exit-non-zero-on-fix, --show-fixes]
-      - id: ruff-format
+  #- repo: https://github.com/astral-sh/ruff-pre-commit
+    #rev: v0.9.5
+    #hooks:
+      #- id: ruff
+        #args: [--fix, --exit-non-zero-on-fix, --show-fixes]
+      #- id: ruff-format
